Fix projects page link hitbox alignment

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -588,6 +588,15 @@ body {
   margin-bottom: 5px;
 }
 
+.projects-section.just-in-section li a {
+  display: block;
+  width: 100%;
+}
+
+.projects-section.just-in-section li h3 {
+  margin: 0;
+}
+
 .projects-section.just-in-section h2 {
   margin: 10px 0 0 10px;
 }
